--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,24 +27,8 @@ jobs:
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: echo $DOCKER_PASSWORD | docker login -u $DOCKER_USER --password-stdin
 
+      - name: Tag the Docker image
+        run: docker tag myapp:latest cringecode/anki:latest
+
       - name: Push the Docker image
-        run: docker tag myapp:latest mydockerhubuser/myapp:latest
-        run: docker push mydockerhubuser/myapp:latest
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-      - name: Deploy to server
-        uses: appleboy/ssh-action@v0.1.3
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
-          port: ${{ secrets.SERVER_SSH_PORT }}
-          script: |
-            docker pull mydockerhubuser/myapp:latest
-            docker stop myapp || true
-            docker rm myapp || true
-            docker run -d --name myapp -p 8080:8080 mydockerhubuser/myapp:latest
+        run: docker push cringecode/anki:latest
