--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,15 +12,6 @@ jobs:
     environment: Default
 
     steps:
-      - name: Log in to Docker Hub
-        env:
-          DOCKER_USER: ${{ secrets.DOCKER_USER }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        run: |
-          echo "DOCKER_USER=${{ secrets.DOCKER_USER }}"
-          echo "DOCKER_PASSWORD=${{ secrets.DOCKER_PASSWORD }}"
-          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USER }}" --password-stdin
-
       - name: Checkout code
         uses: actions/checkout@v2
 
@@ -34,11 +25,30 @@ jobs:
 
       - name: Log in to Docker Hub
         env:
+          DOCKER_USER: ${{ secrets.DOCKER_USER }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        run: echo $DOCKER_PASSWORD | docker login -u cringecode --password-stdin
+        run: echo $DOCKER_PASSWORD | docker login -u $DOCKER_USER --password-stdin
 
       - name: Tag the Docker image
         run: docker tag myapp:latest cringecode/anki:latest
 
       - name: Push the Docker image
         run: docker push cringecode/anki:latest
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Deploy to server
+        uses: appleboy/ssh-action@v0.1.3
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          port: ${{ secrets.SERVER_SSH_PORT }}
+          script: |
+            docker pull cringecode/anki:latest
+            docker stop anki || true
+            docker rm anki || true
+            docker run -d --name myapp -p 8080:8080 cringecode/anki:latest
