--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,17 +38,28 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
+    environment: production
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up SSH
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SERVER_SSH_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -H ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts
+
       - name: Deploy to server
-        uses: appleboy/ssh-action@v0.1.3
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
-          port: ${{ secrets.SERVER_SSH_PORT }}
-          script: |
-            docker pull cringecode/anki:latest
-            docker stop anki || true
-            docker rm anki || true
-            docker run -d --name myapp -p 8080:8080 cringecode/anki:latest
+        env:
+          DOCKER_USER: ${{ secrets.DOCKER_USER }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        run: |
+          ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
+            docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+            docker pull mydockerhubuser/myapp:latest
+            docker stop myapp || true
+            docker rm myapp || true
+            docker run -d --name myapp -p 8080:8080 mydockerhubuser/myapp:latest
+          EOF
