--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    environment: production
+    environment: Default
 
     steps:
       - name: Checkout code
