Configure CI/CD

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,8 +58,8 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
             sudo docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-            sudo docker pull mydockerhubuser/myapp:latest
-            sudo docker stop myapp || true
-            sudo docker rm myapp || true
-            sudo docker run -d --name myapp -p 8080:8080 mydockerhubuser/myapp:latest
+            sudo docker pull cringecode/anki:latest
+            sudo docker stop anki || true
+            sudo docker rm anki || true
+            sudo docker run -d --name anki -p 8080:8080 cringecode/anki:latest
           EOF
