Configure CI/CD

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,13 +20,13 @@ jobs:
           go-version: 1.22
 
       - name: Build the Docker image
-        run: docker build -t myapp:latest .
+        run: docker build -t anki:latest .
 
       - name: Log in to Docker Hub
-        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker anki-free.cr.cloud.ru login -u ${{ secrets.DOCKER_USER }} --password-stdin
+        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker anki-free.cr.cloud.ru login -u "${{ secrets.DOCKER_USER }}" --password-stdin
 
       - name: Tag the Docker image
-        run: docker tag myapp:latest anki-free.cr.cloud.ru/anki:latest
+        run: docker tag anki:latest anki-free.cr.cloud.ru/anki:latest
 
       - name: Push the Docker image
         run: docker push anki-free.cr.cloud.ru/anki:latest
